src/np222kk/dv507/a2/test/cases/negative/test_neg_functions_overloading.ofp
void main() {
    
}

void test() {
    
}

void test(int i) {
    
}

int test() {
    return 1;
}
